--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,11 @@
 <%- include('partials/header'); -%>
 <h1>Hello</h1>
-<% for(var i=0;i<ContentsLists.length;i++) { %>
-  <h2><%= ContentTitles[i] %></h2><br>
-  <p><%= ContentsLists[i] %>
+<% Posts.forEach((post)=>{ %>
+  <h2><%= post.title %></h2><br>
+  <p>
+    <%= post.content.substring(0,100) + "..." %><a href="/posts/<%= post.title %>">Read more</a>
   </p>
   <hr>
-  <% } %>
+  <% }) %>
 
 <%- include('partials/footer'); -%>
